--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "axios": "^1.5.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "form-data": "^4.0.0",
     "mongoose": "^7.5.3",
+    "openai": "^4.11.0",
     "uuid": "^9.0.1"
   }
 }
