--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.3",
     "form-data": "^4.0.0",
     "mongoose": "^7.5.3",
+    "multer": "^1.4.5-lts.1",
     "openai": "^4.11.0",
     "uuid": "^9.0.1"
   }
